NEWS for Seq66 0.99.14
Chris Ahlstrom
2015-07-10 to 2024-08-21

# Changelog

## [0.99.14]

    To do.

### Added

- Added the use of the Esc key to close the external song editor window
  if not playing and not in adding mode. Similar to the fix made to
  the pattern editor for issue #117.
- Added the elliptical progress-box option to Preferences / Display.
- In the pattern editor, a tiny unlabelled button toggles the
  showing of note information when the mouse hovers over a note.

### Fixed

- In the zoomer class, rearranged members to avoid a warning (error)
  from g++ v. 14.2.1 about zoom being uninitialized in the constructor.
- issue #128 "Recording type for loop button not working". Fixes the
  issue in both directions.
- issue #128 "Quantized Record Button problem" fixed by allowing
  the existing sequence recording status to be modified with an alteration.
- Tightened up the handling of selecting a pattern's input buss.

### Changed

- Standardized on "Overdub" for the pattern-window merge functionality.
  See issue #128.
- Updating the PDF documentation based on issue fixes and other fixes.
- Replaced the --session-tag option with --session.

## [0.99.13] - 2024-08-05

    This release is minor, a couple of lesser feature and some fixes.
    No release files are provided, no Windows installer. We've been
    working on another project, and it is time to move forward here.

### Added

- Added 'progress-box-elliptical' to the 'usr' file.
  It is a 'usr' option to show an elliptical progress box.
- New license files adhering to GitHub conventions.

### Fixed

- Fixed the writing and byte-counting of the end-of track event.
  This adds 1 byte to the size of a Se66 MIDI file.
- Fixed the counting of the size of empty note strings. Empty notes
  alway have a two-byte (short) note length of 0.

### Changed

- Changed the Tempo Track setting fields slightly in Edit / Preferences
  for clarity.